Add materials category
