# docs/swagger.yaml
@@ -31,6 +31,17 @@ definitions:
       name:
         type: string
     type: object
+  entity.Material:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      qty:
+        type: integer
+      unit_value:
+        type: integer
+    type: object
 info:
   contact:
     email: support@swagger.io
@@ -291,6 +302,101 @@ paths:
       summary: Get Location
       tags:
       - locations
+  /materials:
+    get:
+      consumes:
+      - '*/*'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Material'
+            type: array
+      summary: Get Materials
+      tags:
+      - materials
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Add material
+        in: body
+        name: Material
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Material'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entity.Material'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Create Material
+      tags:
+      - materials
+  /materials/{id}:
+    delete:
+      consumes:
+      - '*/*'
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "405":
+          description: Method Not Allowed
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Delete material
+      tags:
+      - materials
+    get:
+      consumes:
+      - '*/*'
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Material'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Get Material
+      tags:
+      - materials
 schemes:
 - http
 swagger: "2.0"
